test: 테스트 메서드에 displayname 추가